1998-04-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* view-utils.c (view_utils_draw_events): Use better format
	specifier for strftime().
	(view_utils_draw_textured_frame): Ultra-nifty function to draw
	textured "metal" frames, like Netscape's handles.

1998-04-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gncal-day-view.c (gncal_day_view_update): Day events are now
	cached inside the widget.  They get initialized at this time.

	* view-utils.c (view_utils_draw_events): Use the list of events. 

1998-04-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-day-view.c (gncal_day_view_set_shadow): New customization
	function.  We can't decide on a stupid border type :-)
	(gncal_day_view_init): Made GTK_SHADOW_ETCHED_IN be the default
	shadow type.  Looks good.

1998-04-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* main.c: New main program that uses our new datatypes and
	objects. 

	* calendar.c (calendar_load_from_vobject, calendar_load):
	Implement loading of vCalendar objects and vCalendar files. 

	* calobj.c (ical_object_create_from_vobject): Implement loading of
	vCalendar event and todo objects. 

	* timeutil.c (isodate_from_time_t): New function. 

	* gnome-cal.c, gnome-cal.h: Implement a toplevel widget, derived
	from GnomeApp.  It holds all of the day views and arbitrates the
	display.

1998-04-02  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-week-view.[ch]: New week view composite widget.  This
	provides a full week view (7 day views plus busy time display --
	the latter is currently unimplemented).

1998-04-01  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gncal-day-view.c: New day view widget.  It is intended to be a
	child widget of the week view composite widget.

	* calendar.c (calendar_get_objects_in_range):
	(calendar_get_events_in_range): 
	(calendar_get_journal_in_range): 
	(calendar_get_journal_in_range): These functions now take a