@@ -1,0 +1,3 @@
+
+extern int day_begin, day_end;
+extern char *user_name;
