@@ -20,7 +20,7 @@ time_from_isodate (char *str)
 	my_tm.tm_year = (digit_at (str, 0) * 1000 + digit_at (str, 1) * 100 +
 		digit_at (str, 2) * 10 + digit_at (str, 3)) - 1900;
 
-	my_tm.tm_mon  = digit_at (str, 4) * 10 + digit_at (str, 5);
+	my_tm.tm_mon  = digit_at (str, 4) * 10 + digit_at (str, 5) - 1;
 	my_tm.tm_mday = digit_at (str, 6) * 10 + digit_at (str, 7);
 	my_tm.tm_hour = digit_at (str, 9) * 10 + digit_at (str, 10);
 	my_tm.tm_min  = digit_at (str, 11) * 10 + digit_at (str, 12);
@@ -28,15 +28,19 @@ time_from_isodate (char *str)
 	my_tm.tm_isdst = -1;
 	
 	t = mktime (&my_tm);
-	{
-		struct tm *tm = localtime (&t);
-
-		printf ("TIEMPO: %d/%d/%d %d:%d:%d\n",
-			tm->tm_mday, tm->tm_mon, tm->tm_year,
-			tm->tm_hour, tm->tm_min, tm->tm_sec);
-	}
 	return t;
 }
+
+void
+print_time_t (time_t t)
+{
+	struct tm *tm = localtime (&t);
+	
+	printf ("TIEMPO: %d/%d/%d %d:%d:%d\n",
+		tm->tm_mday, tm->tm_mon, tm->tm_year,
+		tm->tm_hour, tm->tm_min, tm->tm_sec);
+}
+
 
 char *
 isodate_from_time_t (time_t t)
